--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -68,5 +68,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationAlwaysUsageDescription</key> 
+	<string>To do the usage statistic</string> 
+	<key>NSLocationWhenInUseUsageDescription</key> 
+	<string>To do the usage statistic</string>
 </dict>
 </plist>
